2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_db.php, operation/search_modules.php,
	operation/search_agents.php: fixed SQL querys, this querys in previous
	version haven't lines SQL code for to search into subgroups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* operation/servers/view_server.php: Fixed ACL permissions
	* operation/servers/view_server_detail.php: Fixed ACL permissions
	* operation/menu.php: Let an "AR" user view 'Pandora servers' menu
	
	Fix: #3183477

2011-02-18 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js: fixed bug that erase the
	label of items when moving in other position.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Adding layer, group combo only
	displays user's groups.

2011-02-18 Javier Lanz <javier.lanz@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Group combo now only displays
	user's groups.

2011-02-18 Sancho Lerena <slerena@artica.es>

	Merged bugfix from trunk.

	* operation/agentes/gis_view.php: Fixed ACL Problems in operation
	view (Was looking for PM instead AR!). Fixed search by date in data
	view for GIS data. 
	
2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* include/functions_reports.php
	godmode/reporting/reporting_builder.main.php
	godmode/reporting/reporting_builder.php:Only administrator users can select and see 
	group All in this views. 

	Fix: #3183412, 3183413 

2011-02-07 Javier Lanz <javier.lanz@artica.es>
	* godmode/gis_maps/index.php: Only display Default column to an admin
	user

2011-02-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk

	* include/functions_custom_graphs.php
	godmode/reporting/graph_builder.main.php
	godmode/reporting/graphs.php: Only administrator users can select and see 